<?xml version="1.0" encoding="utf-8"?>
<com.yunos.tvtaobao.search.view.KeySearchLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ytm_search_background"
    android:paddingRight="@dimen/dp_80"
    tools:context=".activity.KeySearchActivity">

    <EditText
        android:id="@+id/key_search_content"
        android:layout_width="@dimen/dp_396"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_68"
        android:background="@null"
        android:focusable="false"
        android:imeOptions="actionSearch"
        android:inputType="textNoSuggestions"
        android:maxLength="100"
        android:gravity="center_horizontal"
        android:hint="@string/input_box_tips"
        android:textColor="#ff6000"
        android:textSize="@dimen/sp_32"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/dp_324"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_95"
        android:layout_marginTop="@dimen/dp_24"
        android:background="#6d7482"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_search_content" />

    <com.yunos.tvtaobao.search.widget.ImeFullView
        android:id="@+id/ime_full_view"
        android:layout_width="@dimen/dp_396"
        android:layout_height="@dimen/dp_500"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_search_content" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/dp_726"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_474"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tv_search_history"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_56"
            android:focusable="false"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="0sp"
            android:text="@string/ytm_search_history"
            android:textColor="#ffffff"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_delete_search_history"
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_56"
            android:background="@drawable/bg_delete_search_history"
            android:focusable="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="8sp"
            android:text="@string/ytm_search_history_delete"
            android:textColor="@color/takeout_color_a2aaba"
            android:textSize="@dimen/dp_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_search_history"
            android:layout_width="@dimen/dp_726"
            android:layout_height="@dimen/dp_248"
            android:layout_marginTop="@dimen/dp_24"
            android:focusable="false"
            android:nextFocusDown="@+id/cl_search_discovery"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_history" />


        <TextView
            android:id="@+id/tv_search_discovery"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="0sp"
            android:text="@string/ytm_search_found"
            android:textColor="#ffffff"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_search_history"
            app:layout_goneMarginTop="@dimen/dp_56" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_search_discovery"
            android:layout_width="@dimen/dp_726"
            android:layout_height="@dimen/dp_272"
            android:layout_marginTop="@dimen/dp_24"
            android:paddingBottom="@dimen/dp_80"
            android:focusable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_discovery" />
    </android.support.constraint.ConstraintLayout>

    <com.yunos.tvtaobao.search.view.CenterRecyclerView
        android:id="@+id/rv_search_think"
        android:layout_width="@dimen/dp_726"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_474"
        android:focusable="false"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_not_search_related"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_300"
        android:layout_marginRight="@dimen/dp_220"
        android:src="@drawable/tag_not_search_related"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</com.yunos.tvtaobao.search.view.KeySearchLayout>