<?xml version="1.0" encoding="utf-8"?>
<com.yunos.tvtaobao.search.view.SearchFocusPositionManager xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ytm_common_bg" >

    <LinearLayout
        android:layout_width="@dimen/dp_400"
        android:layout_height="@dimen/dp_600"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_73"
        android:background="@drawable/ytm_search_keyboard_bg"
        android:descendantFocusability="afterDescendants"
        android:focusable="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/search_input_key"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="bottom|center_horizontal"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:maxLength="100"
            android:paddingLeft="@dimen/dp_32"
            android:paddingRight="@dimen/dp_32"
            android:paddingTop="@dimen/dp_10"
            android:privateImeOptions="HideInputView"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_43" />

        <include
            android:id="@+id/ime_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/ytm_ime_board_layout"
            android:focusable="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_520"
        android:layout_marginTop="@dimen/dp_70"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/search_example_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_hotwords_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:focusable="false"
                    android:text="@string/ytm_search_input_tip_first"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_24" />

                <com.yunos.tvtaobao.search.view.HotWordView
                    android:id="@+id/layout_hotword_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_12"
                    android:focusable="false" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_6"
                android:focusable="false"
                android:text="@string/ytm_search_input_tip_second"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_20"
                android:focusable="false"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/example_image"
                    android:layout_width="@dimen/dp_186_67"
                    android:layout_height="@dimen/dp_253_33"
                    android:background="@drawable/ytm_search_example_pic"
                    android:scaleType="fitXY" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_253_33"
                    android:layout_marginLeft="@dimen/dp_27">

                    <TextView
                        android:id="@+id/example_tip_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/dp_15"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_24" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true">

                        <ImageView
                            android:layout_marginBottom="0dp"
                            android:background="@drawable/sound_toast_mic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/sound_toast"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp_24"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/nodata_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_44"
            layout="@layout/ytm_nodata_lay"
            android:focusable="false"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="@dimen/dp_666"
            android:layout_height="@dimen/dp_600"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_3"
            android:focusable="true" >

            <com.yunos.tv.app.widget.focus.FocusListView
                android:id="@id/result_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ytm_search_result_panel"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:nextFocusDown="@null"
                android:nextFocusLeft="@+id/ime_grid"
                android:nextFocusRight="@null"
                android:nextFocusUp="@null"
                android:scrollingCache="false" />

            <com.yunos.tvtaobao.search.view.CustomAlphaView
                android:id="@+id/favor_bottom_mask"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_127"
                android:layout_alignParentBottom="true"
                android:alpha="0"
                android:background="@drawable/ytm_search_result_butom_mask"
                android:focusable="false" />
        </RelativeLayout>
    </RelativeLayout>

</com.yunos.tvtaobao.search.view.SearchFocusPositionManager>